--- a/webpack.react.guide/src/index.html
+++ b/webpack.react.guide/src/index.html
@@ -121,6 +121,31 @@
         -webkit-font-feature-settings: 'liga';
         -webkit-font-smoothing: antialiased;
     }
+
+
+
+    .page-transition-enter {
+        -webkit-transition: opacity 0.3s ease-in-out;
+                transition: opacity 0.3s ease-in-out;
+        opacity: 0;
+        position: absolute;
+    }
+    
+    .page-transition-enter.page-transition-enter-active {
+        opacity: 1;
+    }
+    
+    .page-transition-leave {
+        -webkit-transition: opacity 0.3s ease-in-out;
+                transition: opacity 0.3s ease-in-out;
+        opacity: 1;
+        position: absolute;
+    }
+
+    .page-transition-leave.page-transition-leave-active {
+        opacity: 0;
+    }
+
     </style>
 </head>
 <body>
